# cookiecutter-minimal-pypackage

./: .gitignore  LICENSE  README.md  cookiecutter.json
test/: test.py
{{cookiecutter.package_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  setup.py
{{cookiecutter.package_name}}/notebooks/: _tpl.ipynb
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/utils/: ipython_magics.py  mlflow.py
