[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.package_version}}"
description = ""
authors = ["{{cookiecutter.author_name}}"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">={{ cookiecutter.python_version }},<3.13"
pandas = "^2.1.1"
python-dotenv = "^1.0.0"
panel = "^1.3.6"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
ruff = "*"
mlflow = "^2.8.1"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
